# wasmer-wasi-alternative-prototype

./: .gitignore  .gitmodules  Cargo.toml  README.md
wasihost/: Cargo.toml
wasihost-core/: Cargo.toml
wasihost-core/src/: lib.rs  string_representation.rs  wasi_snapshot_preview1.rs
wasihost-demo/: Cargo.toml
wasihost-demo/src/: main.rs
wasihost/src/: lib.rs  wasi_snapshot_preview1.rs
wasihost/src/os/: mod.rs  unix.rs  unknown.rs
wasihost/src/wasi_snapshot_preview1/: atomic.rs  mod.rs  wasi_fd.rs
wasihost/src/wasi_snapshot_preview1/wasi_fd/: character_device.rs  mod.rs
wasm-demo/: Cargo.toml
wasm-demo/src/: main.rs
wasmer-wasi-alternative-prototype/: Cargo.toml
wasmer-wasi-alternative-prototype/src/: lib.rs  wasi_snapshot_preview1.rs
witx-gen/: Cargo.toml
witx-gen-macros/: Cargo.toml
witx-gen-macros/src/: array.rs  builtin.rs  builtin_type_ext.rs  const_pointer.rs  enum_type.rs  flags.rs  handle.rs  int.rs  int_repr_ext.rs  interfaces.rs  lib.rs  pointer.rs  string_ext.rs  struct_type.rs  to_ident.rs  token_stream_pair.rs  type_definition_extensions.rs  type_ref_ext.rs  union.rs
witx-gen/src/: lib.rs  ptr.rs
