[package]
name = "wasihost"
version = "0.1.0"
authors = ["Thomas Bächler <thomas@archlinux.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime = "0.14.1"
wasihost-core = { path = "../wasihost-core" }
getrandom = "0.1"
