[package]
name = "witx-gen-macros"
version = "0.1.0"
authors = ["Thomas Bächler <thomas@archlinux.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
witx = "0.8.3"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
