[package]
name = "witx-gen"
version = "0.1.0"
authors = ["Thomas Bächler <thomas@archlinux.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime-core = "0.14.1"
witx-gen-macros = { path = "../witx-gen-macros" }
bitflags = "1.2.1"
